// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentWell renders correctly with a children 1`] = `
<div
  className="wds-content-well "
>
  <strong>
    bold
  </strong>
   text
</div>
`;

exports[`ContentWell renders correctly with default values 1`] = `
<div
  className="wds-content-well "
/>
`;

exports[`ContentWell renders correctly with extra class name 1`] = `
<div
  className="wds-content-well extra-class-name"
/>
`;
